footer and email update

--- a/advertising-with-us.html
+++ b/advertising-with-us.html
@@ -261,11 +261,7 @@
                     </div>
                     <br>
                     <br>
-                    <br>
-                    <br>
-                    <br>
-                    <br>
-                    <br>
+                    
                     <div class="row" id="whatWeDo">
                         <div class="col-md-6">
                             <div>
@@ -319,16 +315,20 @@
         </section>
         <!-- End How it works Section -->
 
-        <div class="container-fluid mt-5" data-aos="fade-up">
-            <h2 class="text-uppercase text-center text-danger fw-bold">Advantages to Your Advertising Campaigns</h2>
-            <p class="text-center">
-                Our digital signage advertising network contains collection of digital signs that display image, video,
-                and motion-graphic advertising content to a given audience. The ideal location for a digital advertising
-                sign is a place where there is heavy foot traffic and a reason for people to slow down. When people have
-                a short pause in their route, they have a chance to observe your digital advertising sign. <br>
-                These digital signs are typically found in: lobbies, waiting rooms, and other public spaces such as
-                libraries and bus stops
-            </p>
+        <div class="container mt-5" data-aos="fade-up">
+            <div class="row">
+                <div class="col-md-12">
+                    <h2 class="text-uppercase text-center text-danger fw-bold">Advantages to Your Advertising Campaigns</h2>
+                    <p class="text-center">
+                        Our digital signage advertising network contains collection of digital signs that display image, video,
+                        and motion-graphic advertising content to a given audience. The ideal location for a digital advertising
+                        sign is a place where there is heavy foot traffic and a reason for people to slow down. When people have
+                        a short pause in their route, they have a chance to observe your digital advertising sign.
+                        These digital signs are typically found in: lobbies, waiting rooms, and other public spaces such as
+                        libraries and bus stops
+                    </p>
+                </div>
+            </div>
             <div class="row white-smoke">
                 <div class="col-md-10">
                     <div class="row">
