--- a/index.html
+++ b/index.html
@@ -1828,7 +1828,7 @@
         <!-- You can delete the links only if you purchased the pro version. -->
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/sailor-free-bootstrap-theme/ -->
-        Designed by <a href="https://abusalehfaysal.github.io/">Abu Saleh Faysal</a>
+        <!-- Designed by <a href="https://abusalehfaysal.github.io/">Abu Saleh Faysal</a> -->
       </div>
     </div>
   </footer><!-- End Footer -->
