--- a/retail.html
+++ b/retail.html
@@ -526,8 +526,6 @@
     <!-- ======= Clients Section ======= -->
     <section id="clients" class="clients sky-blue mt-5">
       <div class="container">
-        <br>
-        <br>
         <h2 class="text-danger fw-bold">CUSTOMERS</h2>
         <div class="row">
           <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
@@ -644,7 +642,7 @@
       </div>
     </section> -->
     <div class="container mt-5">
-      <h2 class="text-center text-uppercase text-danger fw-bold">Digital Signage Product for Retail Industry
+      <h2 class="text-center text-uppercase text-danger fw-bold">Suggested Products
       </h2>
       <div class="row">
         <div class="owl-carousel owl-theme" id="aboutus">
@@ -746,7 +744,7 @@
               <div class="email">
                 <i class="bi bi-envelope"></i>
                 <h4 class="text-white">Email:</h4>
-                <p class="text-white">info@example.com</p>
+                <p class="text-white">info@aflaxdigitalsignage.com</p>
               </div>
 
               <div class="phone">
@@ -891,7 +889,7 @@
         <!-- You can delete the links only if you purchased the pro version. -->
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/sailor-free-bootstrap-theme/ -->
-        Designed by <a href="https://abusalehfaysal.github.io/">Abu Saleh Faysal</a>
+        <!-- Designed by <a href="https://abusalehfaysal.github.io/">Abu Saleh Faysal</a> -->
       </div>
     </div>
   </footer><!-- End Footer -->
