retail page navbar update

--- a/retail.html
+++ b/retail.html
@@ -30,6 +30,10 @@
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
 
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+    integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+
   <!-- Custome CSS File -->
   <link rel="stylesheet" href="assets/css/custom.css">
 
@@ -103,16 +107,14 @@
             <li class="dropdown"><a class="active" href="#"><span>Home</span> <i class="bi bi-chevron-down"></i></a>
               <ul>
 
-                <li><a href="about.html">Welcome/About </a></li>
-                <li><a href="#">How it works</a></li>
-                <li><a href="#">Features</a></li>
-                <li><a href="#">What we do</a></li>
-                <li><a href="#">Customers/Our work</a></li>
-                <li><a href="#">Solutions/ Industries</a></li>
-                <li><a href="#">Contents Editing</a></li>
-                <li><a href="#">Screens / Players
-                    Ready to learn more / Contact us
-                  </a></li>
+                <li><a href="#aboutus">Welcome/About </a></li>
+                <li><a href="#howItWorks">How it works</a></li>
+                <li><a href="#whatWeDo">What we do</a></li>
+                <li><a href="#features">Features</a></li>
+                <li><a href="#ourWork">Our work</a></li>
+                <li><a href="#industries">Solutions/Industries</a></li>
+                <li><a href="#customers">Our Customers</a></li>
+                <li><a href="#contactUs">Contact Us</a></li>
               </ul>
             </li>
 
@@ -152,8 +154,8 @@
                 <li><a href="bus-shelter.html">Bus Shelter</a></li>
               </ul>
             </li>
-            <li><a href="#">Case Studies</a></li>
-            <li><a href="#">Rentals</a></li>
+            <li><a href="advertising-with-us.html">Advertise With Us</a></li>
+            <li><a href="rental.html">Rentals</a></li>
             <li><a href="contact.html">Contact</a></li>
             <!-- <li><a href="blog.html">Blog</a></li> -->
 
