--- a/index.html
+++ b/index.html
@@ -1660,16 +1660,14 @@
     </section><!-- End Clients Section -->
 
     <!-- ======= Contact Section ======= -->
-    <section id="contact" class="contact">
+    <section id="contact" class="contact" style="margin-top: 0; padding-top: 2%;">
+      <h2 class="text-center"><b><span class="text-white">CONTACT US TODAY</span></b></h2>
       <div class="container">
-        <h2 class="text-center text-uppercase text-danger fw-bold"><b><span class="text-white">CONTACT US
-              TODAY</span></b></h2>
-        <!-- <h2 class="text-center"><b>Book An Online Demo</b></h2> -->
         <!-- <div>
           <iframe style="border:0; width: 100%; height: 270px;" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d-74.0062269!3d40.7101282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621" frameborder="0" allowfullscreen></iframe>
         </div> -->
 
-        <div class="row mt-5">
+        <div class="row">
 
           <div class="col-lg-4">
             <div class="info">
@@ -1682,7 +1680,7 @@
               <div class="email">
                 <i class="bi bi-envelope"></i>
                 <h4 class="text-white">Email:</h4>
-                <p class="text-white">info@example.com</p>
+                <p class="text-white">info@aflaxdigitalsignage.com</p>
               </div>
 
               <div class="phone">
@@ -1700,18 +1698,18 @@
             <form action="forms/contact.php" method="post" role="form" class="php-email-form">
               <div class="row">
                 <div class="col-md-6 form-group">
-                  <input type="text" name="name" class="form-control" id="name" placeholder="Your First Name" required>
+                  <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
                 </div>
                 <div class="col-md-6 form-group mt-3 mt-md-0">
-                  <input type="email" class="form-control" name="email" id="email" placeholder="Last Name" required>
+                  <input type="email" class="form-control" name="email" id="email" placeholder="Email" required>
                 </div>
               </div>
               <div class="row mt-3">
                 <div class="col-md-6 form-group">
-                  <input type="text" name="name" class="form-control" id="name" placeholder="Email" required>
+                  <input type="email" name="name" class="form-control" id="name" placeholder="Email" required>
                 </div>
                 <div class="col-md-6 form-group mt-md-0">
-                  <input type="email" class="form-control" name="email" id="email" placeholder="Phone" required>
+                  <input type="email" class="form-control" name="email" id="email" placeholder="Email" required>
                 </div>
               </div>
               <div class="row mt-3">
@@ -1758,7 +1756,7 @@
                 A108 Adam Street <br>
                 NY 535022, USA<br><br>
                 <strong>Phone:</strong> +1 5589 55488 55<br>
-                <strong>Email:</strong> info@example.com<br>
+                <strong>Email:</strong> info@aflaxdigitalsignage.com<br>
               </p>
               <div class="social-links mt-3">
                 <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
