--- a/retail.html
+++ b/retail.html
@@ -761,29 +761,29 @@
 
           <div class="col-lg-8 mt-5 mt-lg-0">
 
-            <form action="forms/contact.php" method="post" role="form" class="php-email-form">
+            <form method="post" role="form" class="php-email-form">
               <div class="row">
                 <div class="col-md-6 form-group">
-                  <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
+                  <input type="text" name="first_name" class="form-control" id="first_name" placeholder="Your First Name" required>
                 </div>
                 <div class="col-md-6 form-group mt-3 mt-md-0">
-                  <input type="email" class="form-control" name="email" id="email" placeholder="Email" required>
+                  <input type="text" class="form-control" name="last_name" id="last_name" placeholder="Your Last Name" required>
                 </div>
               </div>
               <div class="row mt-3">
                 <div class="col-md-6 form-group">
-                  <input type="email" name="name" class="form-control" id="name" placeholder="Email" required>
+                  <input type="email" name="email" class="form-control" id="email" placeholder="Email" required>
                 </div>
                 <div class="col-md-6 form-group mt-md-0">
-                  <input type="email" class="form-control" name="email" id="email" placeholder="Email" required>
+                  <input type="text" class="form-control" name="phone" id="phone" placeholder="Phone" required>
                 </div>
               </div>
               <div class="row mt-3">
                 <div class="col-md-6 form-group">
-                  <input type="text" name="name" class="form-control" id="name" placeholder="Organization" required>
+                  <input type="text" name="organization" class="form-control" id="organization" placeholder="Organization" required>
                 </div>
                 <div class="col-md-6 form-group mt-md-0">
-                  <input type="email" class="form-control" name="email" id="email" placeholder="Delivery Day" required>
+                  <input type="number" class="form-control" name="delivery_day" id="delivery_day" placeholder="Delivery Day" required>
                 </div>
               </div>
               <!-- <div class="form-group mt-3">
