--- a/retail.html
+++ b/retail.html
@@ -717,7 +717,7 @@
           <div class="item">
             <a href="rental.html">
               <img src="assets/img/SuggestedProducts/ultra wide display.jpg" alt="" class="img-fluid border border-dark">
-              <p class="text-center text-dark"><b>Rentals</b></p>
+              <p class="text-center text-dark"><b>Ultra Wide Display</b></p>
             </a>
           </div>
           <div class="item">
@@ -735,13 +735,13 @@
           <div class="item">
             <a href="retail.html">
               <img src="assets/img/SuggestedProducts/Free stand.jpg" alt="" class="img-fluid border border-dark">
-              <p class="text-center text-dark"><b>Retail</b></p>
+              <p class="text-center text-dark"><b>Free Stand</b></p>
             </a>
           </div>
           <div class="item">
             <a href="rental.html">
               <img src="assets/img/SuggestedProducts/tablet.jpg" alt="" class="img-fluid border border-dark">
-              <p class="text-center text-dark"><b>Rentals</b></p>
+              <p class="text-center text-dark"><b>Tablet</b></p>
             </a>
           </div>
           <div class="item">
