suggested products and spacing in the home page

--- a/retail.html
+++ b/retail.html
@@ -651,7 +651,7 @@
           <div class="item">
             <a href="rental.html">
               <img src="assets/img/SuggestedProducts/POS Touch Screen.jpg" alt="" class="img-fluid border border-dark">
-              <p class="text-center text-dark"><b>Rentals</b></p>
+              <p class="text-center text-dark"><b>PoS Touch Screen</b></p>
             </a>
           </div>
           <div class="item">
@@ -729,7 +729,7 @@
           <div class="item">
             <a href="restaurants.html">
               <img src="assets/img/SuggestedProducts/food-kiosk.jpg" alt="" class="img-fluid border border-dark">
-              <p class="text-center text-dark"><b>Bar/Restaurant</b></p>
+              <p class="text-center text-dark"><b>Self Service Kiosks</b></p>
             </a>
           </div>
           <div class="item">
