--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
   <main id="main">
 
     <div class="container mt-5">
-      <h2 class="text-center text-uppercase text-danger fw-bold">Some of Our Digital Signage Product
+      <h2 class="text-center text-uppercase text-danger fw-bold">Some of Our Digital Signage Products
       </h2>
       <div class="row">
         <div class="owl-carousel owl-theme" id="aboutus">
@@ -831,8 +831,6 @@
 
     <div class="sky-blue">
       <div class="container mt-5">
-        <br>
-        <br>
         <h2 class="text-center text-uppercase text-danger fw-bold">SOME OF OUR DIGITAL SIGNAGE SECTOR/SOLUTIONS
         </h2>
         <div class="row" id="features">
