--- a/index.html
+++ b/index.html
@@ -918,7 +918,7 @@
     <div class="feature mt-5 white-smoke">
       <div class="container">
         <div class="row content text-center">
-          <h2 class="text-uppercase text-danger fw-bold mt-5"> OUR FEATURES</h2>
+          <h2 class="text-uppercase text-danger fw-bold"> OUR FEATURES</h2>
           <p>Aflax Digital Signage will ensure that the desire audience never misses a message with our complete digital
             signage integrated solutions. Our Content Management System lets you easily manage, schedule and track
             engagement with your visual content. Our solutions provide with clients with - > Proof of Play, Triggered
@@ -1166,8 +1166,6 @@
 
     <div class="sky-blue">
       <div class="container mt-5">
-        <br>
-        <br>
         <h2 class="text-center text-uppercase text-danger fw-bold">Our Work
         </h2>
         <div class="row" id="industries">
@@ -1230,7 +1228,7 @@
     <div class="feature mt-5 white-smoke">
       <div class="container">
         <div class="row content text-center">
-          <h2 class="text-uppercase text-danger fw-bold mt-5">INDUSTRIES</h2>
+          <h2 class="text-uppercase text-danger fw-bold">INDUSTRIES</h2>
           <p>While the idea of switching to digital signage can seem like a big project once implemented it can reap
             countless rewards for all
             Types of businesses, whether in be retailer, a hotel, or a company using signs to communicate internal
