--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
 
 
     <!-- ======= Features Section ======= -->
-    <section class="about sky-blue">
+    <section class="about sky-blue" style="padding: 0;">
       <div class="container">
         <div class="row content text-center" id="howItWorks">
           <h2 class="text-uppercase text-danger fw-bold">WHY WITH US</h2>
@@ -391,7 +391,7 @@
     </section><!-- End Features Section -->
 
     <!-- ======= How it works Section ======= -->
-    <section class="about white-smoke">
+    <section class="about white-smoke" style="padding: 0;">
       <div class="container">
 
         <div class="row content">
@@ -456,7 +456,7 @@
     </section><!-- End How it works Section -->
 
     <!-- ======= What we do Section ======= -->
-    <section class="about">
+    <section class="about" style="padding: 0;">
       <div class="container">
 
         <div class="row content">
@@ -1656,7 +1656,7 @@
     </section><!-- End Clients Section -->
 
     <!-- ======= Contact Section ======= -->
-    <section id="contact" class="contact" style="margin-top: 0; padding-top: 2%;">
+    <section id="contact" class="contact" style="margin-top: 0; padding-top: 0%;">
       <h2 class="text-center"><b><span class="text-white">CONTACT US TODAY</span></b></h2>
       <div class="container">
         <!-- <div>
