--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
 
 
     <!-- ======= Features Section ======= -->
-    <section class="about sky-blue" style="padding: 0;">
+    <section class="about sky-blue" style="padding: 20px 0;">
       <div class="container">
         <div class="row content text-center" id="howItWorks">
           <h2 class="text-uppercase text-danger fw-bold">WHY WITH US</h2>
@@ -391,7 +391,7 @@
     </section><!-- End Features Section -->
 
     <!-- ======= How it works Section ======= -->
-    <section class="about white-smoke" style="padding: 0;">
+    <section class="about white-smoke" style="padding: 20px 0;">
       <div class="container">
 
         <div class="row content">
@@ -456,7 +456,7 @@
     </section><!-- End How it works Section -->
 
     <!-- ======= What we do Section ======= -->
-    <section class="about" style="padding: 0;">
+    <section class="about" style="padding: 20px 0;">
       <div class="container">
 
         <div class="row content">
@@ -831,6 +831,7 @@
 
     <div class="sky-blue">
       <div class="container mt-5">
+        <br>
         <h2 class="text-center text-uppercase text-danger fw-bold">SOME OF OUR DIGITAL SIGNAGE SECTOR/SOLUTIONS
         </h2>
         <div class="row" id="features">
@@ -918,7 +919,7 @@
     <div class="feature mt-5 white-smoke">
       <div class="container">
         <div class="row content text-center">
-          <h2 class="text-uppercase text-danger fw-bold"> OUR FEATURES</h2>
+          <h2 class="text-uppercase text-danger fw-bold mt-3"> OUR FEATURES</h2>
           <p>Aflax Digital Signage will ensure that the desire audience never misses a message with our complete digital
             signage integrated solutions. Our Content Management System lets you easily manage, schedule and track
             engagement with your visual content. Our solutions provide with clients with - > Proof of Play, Triggered
@@ -1166,6 +1167,7 @@
 
     <div class="sky-blue">
       <div class="container mt-5">
+        <br>
         <h2 class="text-center text-uppercase text-danger fw-bold">Our Work
         </h2>
         <div class="row" id="industries">
@@ -1228,7 +1230,7 @@
     <div class="feature mt-5 white-smoke">
       <div class="container">
         <div class="row content text-center">
-          <h2 class="text-uppercase text-danger fw-bold">INDUSTRIES</h2>
+          <h2 class="text-uppercase text-danger fw-bold mt-3">INDUSTRIES</h2>
           <p>While the idea of switching to digital signage can seem like a big project once implemented it can reap
             countless rewards for all
             Types of businesses, whether in be retailer, a hotel, or a company using signs to communicate internal
@@ -1656,7 +1658,7 @@
     </section><!-- End Clients Section -->
 
     <!-- ======= Contact Section ======= -->
-    <section id="contact" class="contact" style="margin-top: 0; padding-top: 0%;">
+    <section id="contact" class="contact" style="margin-top: 0; padding: 20px 0;">
       <h2 class="text-center"><b><span class="text-white">CONTACT US TODAY</span></b></h2>
       <div class="container">
         <!-- <div>
