--- a/advertising-with-us.html
+++ b/advertising-with-us.html
@@ -26,7 +26,7 @@
     <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
     <link href="assets/vendor/remixicon/remixicon.css" rel="stylesheet">
     <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link rel="stylesheet" href="assets/aos/aos.css">
 
     <!-- Template Main CSS File -->
     <link href="assets/css/style.css" rel="stylesheet">
@@ -332,7 +332,7 @@
             <div class="row white-smoke">
                 <div class="col-md-10">
                     <div class="row">
-                        <div class="col-md-4 offset-md-2 p-2 featureshover" data-aos="fade-right" data-aos-delay="1000">
+                        <div class="col-md-4 offset-md-2 p-2 featureshover" data-aos="fade-right" data-aos-delay="100">
                             <div class="text-center">
                                 <img width="80" height="80" class="img-fluid"
                                     src="assets/img/AdvertisingWithUs/icon1.png" alt="">
@@ -343,7 +343,7 @@
                                 engagement as the communication will be shaped by relevant local insights.
                             </p>
                         </div>
-                        <div class="col-md-4 offset-md-2 featureshover" data-aos="fade-left" data-aos-delay="1000">
+                        <div class="col-md-4 offset-md-2 featureshover" data-aos="fade-left" data-aos-delay="100">
                             <img src="assets/img/AdvertisingWithUs/f1.jpg" alt="" class="img-fluid">
                         </div>
                     </div>
@@ -353,10 +353,10 @@
             <div class="row mt-2">
                 <div class="col-md-10">
                     <div class="row">
-                        <div class="col-md-4 offset-md-2 featureshover" data-aos="fade-right" data-aos-delay="1000">
+                        <div class="col-md-4 offset-md-2 featureshover" data-aos="fade-right" data-aos-delay="100">
                             <img src="assets/img/AdvertisingWithUs/f2.png" alt="" class="img-fluid">
                         </div>
-                        <div class="col-md-4 offset-md-2 p-2 featureshover" data-aos="fade-left" data-aos-delay="1000">
+                        <div class="col-md-4 offset-md-2 p-2 featureshover" data-aos="fade-left" data-aos-delay="100">
                             <div class="text-center">
                                 <img width="80" height="80" class="img-fluid"
                                     src="assets/img/AdvertisingWithUs/icon2.png" alt="">
@@ -374,8 +374,8 @@
             <div class="row mt-2 white-smoke">
                 <div class="col-md-10">
                     <div class="row">
-                        <div class="col-md-4 offset-md-2 p-2 featureshover" data-aos="fade-right" data-aos-delay="1000">
-                            <div class="text-center" data-aos="zoom-in" data-aos-delay="1000">
+                        <div class="col-md-4 offset-md-2 p-2 featureshover" data-aos="fade-right" data-aos-delay="100">
+                            <div class="text-center" data-aos="zoom-in" data-aos-delay="100">
                                 <img width="80" height="80" class="img-fluid"
                                     src="assets/img/AdvertisingWithUs/icon3.png" alt="">
                             </div>
@@ -386,7 +386,7 @@
                                 audience engagement through impressions, the number of plays, and the expected outcomes.
                             </p>
                         </div>
-                        <div class="col-md-4 offset-md-2 featureshover" data-aos="fade-left" data-aos-delay="1000">
+                        <div class="col-md-4 offset-md-2 featureshover" data-aos="fade-left" data-aos-delay="100">
                             <img src="assets/img/AdvertisingWithUs/f3.jpg" alt="" class="img-fluid">
                         </div>
                     </div>
@@ -396,10 +396,10 @@
             <div class="row mt-2">
                 <div class="col-md-10">
                     <div class="row">
-                        <div class="col-md-4 offset-md-2 featureshover" data-aos="fade-right" data-aos-delay="1000">
+                        <div class="col-md-4 offset-md-2 featureshover" data-aos="fade-right" data-aos-delay="100">
                             <img src="assets/img/AdvertisingWithUs/f4.png" alt="" class="img-fluid">
                         </div>
-                        <div class="col-md-4 offset-md-2 p-2 featureshover" data-aos="fade-left" data-aos-delay="1000">
+                        <div class="col-md-4 offset-md-2 p-2 featureshover" data-aos="fade-left" data-aos-delay="100">
                             <div class="text-center">
                                 <img width="80" height="80" class="img-fluid"
                                     src="assets/img/AdvertisingWithUs/icon4.png" alt="">
@@ -417,7 +417,7 @@
             <div class="row mt-2 white-smoke">
                 <div class="col-md-10">
                     <div class="row">
-                        <div class="col-md-4 offset-md-2 p-2 featureshover" data-aos="fade-right" data-aos-delay="1000">
+                        <div class="col-md-4 offset-md-2 p-2 featureshover" data-aos="fade-right" data-aos-delay="100">
                             <div class="text-center">
                                 <img width="80" height="80" class="img-fluid"
                                     src="assets/img/AdvertisingWithUs/icon5.png" alt="">
@@ -429,7 +429,7 @@
                                 them.
                             </p>
                         </div>
-                        <div class="col-md-4 offset-md-2 featureshover" data-aos="fade-left" data-aos-delay="1000">
+                        <div class="col-md-4 offset-md-2 featureshover" data-aos="fade-left" data-aos-delay="100">
                             <img src="assets/img/AdvertisingWithUs/f6.jpg" alt="" class="img-fluid">
                         </div>
                     </div>
@@ -1833,7 +1833,7 @@
     <script src="assets/vendor/php-email-form/validate.js"></script>
     <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
     <script src="assets/vendor/waypoints/noframework.waypoints.js"></script>
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script src="assets/aos/aos.js"></script>
 
     <!-- Template Main JS File -->
     <script src="assets/js/main.js"></script>
