--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
   <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
   <link href="assets/vendor/remixicon/remixicon.css" rel="stylesheet">
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="assets/aos/aos.css">
+  <!-- <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet"> -->
 
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
@@ -357,9 +359,9 @@
     <!-- ======= Features Section ======= -->
     <section class="about sky-blue" style="padding: 20px 0;">
       <div class="container">
-        <div class="row content text-center" id="howItWorks">
+        <div class="row content text-center" id="howItWorks" data-aos="fade-up">
           <h2 class="text-uppercase text-danger fw-bold">WHY WITH US</h2>
-          <div class="col-md-4">
+          <div class="col-md-4" data-aos="fade-right" data-aos-delay="100">
             <img width="80" height="80" class="img-fluid" src="assets/img/features/content.png" alt="">
             <br>
             <br>
@@ -375,7 +377,7 @@
             <p>Control a network of screens across the globe from a single account. Run promotions nationwide, regional
               or on a specific screen in a specific site.</p>
           </div>
-          <div class="col-md-4">
+          <div class="col-md-4" data-aos="fade-left" data-aos-delay="100">
             <img width="80" height="80" class="img-fluid" src="assets/img/features/social.png" alt="">
             <br>
             <br>
@@ -1867,9 +1869,15 @@
   <script src="assets/vendor/php-email-form/validate.js"></script>
   <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
   <script src="assets/vendor/waypoints/noframework.waypoints.js"></script>
+  <script src="assets/aos/aos.js"></script>
+  <!-- <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script> -->
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
+
+  <script>
+    AOS.init();
+  </script>
 
 </body>
 
