--- a/retail.html
+++ b/retail.html
@@ -26,6 +26,7 @@
   <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
   <link href="assets/vendor/remixicon/remixicon.css" rel="stylesheet">
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="assets/aos/aos.css">
 
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
@@ -466,8 +467,8 @@
     <!-- ======= Start Our Product Section ======= -->
     <div class="container mt-5">
       <h2 class="text-center text-uppercase text-danger fw-bold">Our Digital Signage Features</h2>
-      <div class="row">
-        <div class="col-md-4 featureshover">
+      <div class="row d-flex justify-content-between" data-aos="fade-up">
+        <div class="col-md-3 featureshover border border-secondary" data-aos="fade-right" data-aos-delay="100">
           <div class="text-center">
             <img src="assets/img/digital-features/1.png" alt="" class="img-fluid text">
 
@@ -476,7 +477,7 @@
           <p class="">Showcase your social media onto your screen Including Twitter, YourTube and
             Instagram.</p>
         </div>
-        <div class="col-md-4 featureshover">
+        <div class="col-md-3 featureshover border border-secondary mt-2">
           <div class="text-center">
             <img src="assets/img/digital-features/2.png" alt="" class="img-fluid">
 
@@ -485,7 +486,7 @@
           <p class="">Upload your photos and videos to your content Library ready for use across your
             account.</p>
         </div>
-        <div class="col-md-4 featureshover">
+        <div class="col-md-3 featureshover border border-secondary mt-2" data-aos="fade-left" data-aos-delay="100">
           <div class="text-center">
             <img src="assets/img/digital-features/3.png" alt="" class="img-fluid">
 
@@ -495,8 +496,8 @@
             digital signage kiosks.</p>
         </div>
       </div>
-      <div class="row">
-        <div class="col-md-4 featureshover">
+      <div class="row d-flex justify-content-between mt-3" data-aos="fade-up">
+        <div class="col-md-3 featureshover border border-secondary" data-aos="fade-right" data-aos-delay="100">
           <div class="text-center">
             <img src="assets/img/digital-features/4.png" alt="" class="img-fluid">
 
@@ -504,7 +505,7 @@
           <p class=""><b>Scheduling </b></p>
           <p class="bd-highlight">Save time and reduce your workload through digital signage scheduling.</p>
         </div>
-        <div class="col-md-4 featureshover">
+        <div class="col-md-3 featureshover border border-secondary">
           <div class="text-center">
             <img src="assets/img/digital-features/5.png" alt="" class="img-fluid">
 
@@ -512,7 +513,7 @@
           <p class=""><b>Control a Network of Screens </b></p>
           <p class="">Seamlessly control your network of digital menu boards from central hub.</p>
         </div>
-        <div class="col-md-4 featureshover">
+        <div class="col-md-3 featureshover border border-secondary" data-aos="fade-left" data-aos-delay="100">
           <div class="text-center">
             <img src="assets/img/digital-features/6.png" alt="" class="img-fluid">
 
@@ -972,9 +973,15 @@
   <script src="assets/vendor/php-email-form/validate.js"></script>
   <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
   <script src="assets/vendor/waypoints/noframework.waypoints.js"></script>
+  <script src="assets/aos/aos.js"></script>
+  <!-- <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script> -->
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
+
+  <script>
+    AOS.init();
+  </script>
 
 </body>
 
