retail mouse hover effect added

--- a/retail.html
+++ b/retail.html
@@ -468,7 +468,7 @@
     <div class="container mt-5">
       <h2 class="text-center text-uppercase text-danger fw-bold">Our Digital Signage Features</h2>
       <div class="row d-flex justify-content-between" data-aos="fade-up">
-        <div class="col-md-3 featureshover border border-secondary" data-aos="fade-right" data-aos-delay="100">
+        <div class="col-md-3 featureshover border border-secondary">
           <div class="text-center">
             <img src="assets/img/digital-features/1.png" alt="" class="img-fluid text">
 
@@ -486,7 +486,7 @@
           <p class="">Upload your photos and videos to your content Library ready for use across your
             account.</p>
         </div>
-        <div class="col-md-3 featureshover border border-secondary mt-2" data-aos="fade-left" data-aos-delay="100">
+        <div class="col-md-3 featureshover border border-secondary mt-2">
           <div class="text-center">
             <img src="assets/img/digital-features/3.png" alt="" class="img-fluid">
 
@@ -497,7 +497,7 @@
         </div>
       </div>
       <div class="row d-flex justify-content-between mt-3" data-aos="fade-up">
-        <div class="col-md-3 featureshover border border-secondary" data-aos="fade-right" data-aos-delay="100">
+        <div class="col-md-3 featureshover border border-secondary">
           <div class="text-center">
             <img src="assets/img/digital-features/4.png" alt="" class="img-fluid">
 
@@ -513,7 +513,7 @@
           <p class=""><b>Control a Network of Screens </b></p>
           <p class="">Seamlessly control your network of digital menu boards from central hub.</p>
         </div>
-        <div class="col-md-3 featureshover border border-secondary" data-aos="fade-left" data-aos-delay="100">
+        <div class="col-md-3 featureshover border border-secondary">
           <div class="text-center">
             <img src="assets/img/digital-features/6.png" alt="" class="img-fluid">
 
