--- a/index.html
+++ b/index.html
@@ -158,9 +158,6 @@
             </li>
             <li><a href="advertising-with-us.html">Advertise With Us</a></li>
             <li><a href="rental.html">Rentals</a></li>
-            <li><a href="contact.html">Contact</a></li>
-            <!-- <li><a href="blog.html">Blog</a></li> -->
-
             <li><a href="contact.html">Contact Us</a></li>
             <!-- <li><a href="index.html" class="getstarted">Get Started</a></li> -->
           </ul>
@@ -1715,13 +1712,9 @@
                 </div>
               </div>
               <div class="row mt-3">
-                <div class="col-md-6 form-group">
+                <div class="col-md-12 form-group">
                   <input type="text" name="organization" class="form-control" id="organization"
                     placeholder="Organization" required>
-                </div>
-                <div class="col-md-6 form-group mt-md-0">
-                  <input type="number" class="form-control" name="delivery_day" id="delivery_day"
-                    placeholder="Delivery Day" required>
                 </div>
               </div>
               <!-- <div class="form-group mt-3">
@@ -1783,7 +1776,7 @@
           </div>
 
           <div class="col-lg-3 col-md-6 footer-links">
-            <h4>Our Services</h4>
+            <h4>Industries</h4>
             <ul>
               <li><i class="bx bx-chevron-right"></i> <a href="retail.html">Retail</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="restaurants.html">Bar / Restaurants</a></li>
@@ -1794,7 +1787,7 @@
           </div>
 
           <div class="col-lg-3 col-md-6 footer-links">
-            <h4>Our Products</h4>
+            <h4>Products</h4>
             <ul>
               <li><i class="bx bx-chevron-right"></i> <a href="indoor-lcd-display.html">Indoor LCD Display</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="lcd-video-wall.html">LCD Video Wall</a></li>
