minor design fix

--- a/advertising-with-us.html
+++ b/advertising-with-us.html
@@ -332,7 +332,7 @@
             <div class="row white-smoke">
                 <div class="col-md-10">
                     <div class="row">
-                        <div class="col-md-4 offset-md-2 p-2 featureshover" data-aos="fade-right" data-aos-delay="100">
+                        <div class="col-md-4 offset-md-2 p-2 featureshover" >
                             <div class="text-center">
                                 <img width="80" height="80" class="img-fluid"
                                     src="assets/img/AdvertisingWithUs/icon1.png" alt="">
@@ -343,7 +343,7 @@
                                 engagement as the communication will be shaped by relevant local insights.
                             </p>
                         </div>
-                        <div class="col-md-4 offset-md-2 featureshover" data-aos="fade-left" data-aos-delay="100">
+                        <div class="col-md-4 offset-md-2 featureshover">
                             <img src="assets/img/AdvertisingWithUs/f1.jpg" alt="" class="img-fluid">
                         </div>
                     </div>
@@ -353,10 +353,10 @@
             <div class="row mt-2">
                 <div class="col-md-10">
                     <div class="row">
-                        <div class="col-md-4 offset-md-2 featureshover" data-aos="fade-right" data-aos-delay="100">
+                        <div class="col-md-4 offset-md-2 featureshover" >
                             <img src="assets/img/AdvertisingWithUs/f2.png" alt="" class="img-fluid">
                         </div>
-                        <div class="col-md-4 offset-md-2 p-2 featureshover" data-aos="fade-left" data-aos-delay="100">
+                        <div class="col-md-4 offset-md-2 p-2 featureshover">
                             <div class="text-center">
                                 <img width="80" height="80" class="img-fluid"
                                     src="assets/img/AdvertisingWithUs/icon2.png" alt="">
@@ -374,8 +374,8 @@
             <div class="row mt-2 white-smoke">
                 <div class="col-md-10">
                     <div class="row">
-                        <div class="col-md-4 offset-md-2 p-2 featureshover" data-aos="fade-right" data-aos-delay="100">
-                            <div class="text-center" data-aos="zoom-in" data-aos-delay="100">
+                        <div class="col-md-4 offset-md-2 p-2 featureshover" >
+                            <div class="text-center">
                                 <img width="80" height="80" class="img-fluid"
                                     src="assets/img/AdvertisingWithUs/icon3.png" alt="">
                             </div>
@@ -386,7 +386,7 @@
                                 audience engagement through impressions, the number of plays, and the expected outcomes.
                             </p>
                         </div>
-                        <div class="col-md-4 offset-md-2 featureshover" data-aos="fade-left" data-aos-delay="100">
+                        <div class="col-md-4 offset-md-2 featureshover">
                             <img src="assets/img/AdvertisingWithUs/f3.jpg" alt="" class="img-fluid">
                         </div>
                     </div>
@@ -396,10 +396,10 @@
             <div class="row mt-2">
                 <div class="col-md-10">
                     <div class="row">
-                        <div class="col-md-4 offset-md-2 featureshover" data-aos="fade-right" data-aos-delay="100">
+                        <div class="col-md-4 offset-md-2 featureshover" >
                             <img src="assets/img/AdvertisingWithUs/f4.png" alt="" class="img-fluid">
                         </div>
-                        <div class="col-md-4 offset-md-2 p-2 featureshover" data-aos="fade-left" data-aos-delay="100">
+                        <div class="col-md-4 offset-md-2 p-2 featureshover">
                             <div class="text-center">
                                 <img width="80" height="80" class="img-fluid"
                                     src="assets/img/AdvertisingWithUs/icon4.png" alt="">
@@ -417,7 +417,7 @@
             <div class="row mt-2 white-smoke">
                 <div class="col-md-10">
                     <div class="row">
-                        <div class="col-md-4 offset-md-2 p-2 featureshover" data-aos="fade-right" data-aos-delay="100">
+                        <div class="col-md-4 offset-md-2 p-2 featureshover" >
                             <div class="text-center">
                                 <img width="80" height="80" class="img-fluid"
                                     src="assets/img/AdvertisingWithUs/icon5.png" alt="">
@@ -429,7 +429,7 @@
                                 them.
                             </p>
                         </div>
-                        <div class="col-md-4 offset-md-2 featureshover" data-aos="fade-left" data-aos-delay="100">
+                        <div class="col-md-4 offset-md-2 featureshover">
                             <img src="assets/img/AdvertisingWithUs/f6.jpg" alt="" class="img-fluid">
                         </div>
                     </div>
