--- a/retail.html
+++ b/retail.html
@@ -526,7 +526,7 @@
     <!-- ======= Clients Section ======= -->
     <section id="clients" class="clients sky-blue mt-5">
       <div class="container">
-        <h2 class="text-danger fw-bold">CUSTOMERS</h2>
+        <h2 class="text-danger fw-bold">OUR CUSTOMERS</h2>
         <div class="row">
           <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
             <img src="assets/img/clients/client-1.png" class="img-fluid" alt="">
@@ -946,7 +946,7 @@
       autoplayTimeout: 1000,
       autoplayHoverPause: true,
       nav: true,
-      navText: ["<h1 class='display-4'><i class='fa fa-chevron-left'></i></h1>", "<h1 class='display-4'><i class='fa fa-chevron-right'></i></h1>"],
+      navText: ["<h1 class='display-4 d-none d-sm-none d-md-block'><i class='fa fa-chevron-left'></i></h1>", "<h1 class='display-4 d-none d-sm-none d-md-block'><i class='fa fa-chevron-right'></i></h1>"],
       responsive: {
         0: {
           items: 1
