--- a/index.html
+++ b/index.html
@@ -1840,7 +1840,7 @@
       autoplayTimeout: 1000,
       autoplayHoverPause: true,
       nav: true,
-      navText: ["<h1 class='display-4'><i class='fa fa-chevron-left'></i></h1>", "<h1 class='display-4'><i class='fa fa-chevron-right'></i></h1>"],
+      navText: ["<h1 class='display-4 d-none d-sm-none d-md-block'><i class='fa fa-chevron-left'></i></h1>", "<h1 class='display-4 d-none d-sm-none d-md-block'><i class='fa fa-chevron-right'></i></h1>"],
       responsive: {
         0: {
           items: 1
