advertising with us page updated

--- a/advertising-with-us.html
+++ b/advertising-with-us.html
@@ -331,7 +331,7 @@
             </div>
             <div class="row white-smoke">
                 <div class="col-md-10">
-                    <div class="row">
+                    <div class="row" data-aos="fade-up">
                         <div class="col-md-4 offset-md-2 p-2 featureshover" >
                             <div class="text-center">
                                 <img width="80" height="80" class="img-fluid"
@@ -352,7 +352,7 @@
             <hr>
             <div class="row mt-2">
                 <div class="col-md-10">
-                    <div class="row">
+                    <div class="row" data-aos="fade-up">
                         <div class="col-md-4 offset-md-2 featureshover" >
                             <img src="assets/img/AdvertisingWithUs/f2.png" alt="" class="img-fluid">
                         </div>
@@ -373,7 +373,7 @@
             <hr>
             <div class="row mt-2 white-smoke">
                 <div class="col-md-10">
-                    <div class="row">
+                    <div class="row" data-aos="fade-up">
                         <div class="col-md-4 offset-md-2 p-2 featureshover" >
                             <div class="text-center">
                                 <img width="80" height="80" class="img-fluid"
@@ -395,7 +395,7 @@
             <hr>
             <div class="row mt-2">
                 <div class="col-md-10">
-                    <div class="row">
+                    <div class="row" data-aos="fade-up">
                         <div class="col-md-4 offset-md-2 featureshover" >
                             <img src="assets/img/AdvertisingWithUs/f4.png" alt="" class="img-fluid">
                         </div>
@@ -416,7 +416,7 @@
             <hr>
             <div class="row mt-2 white-smoke">
                 <div class="col-md-10">
-                    <div class="row">
+                    <div class="row" data-aos="fade-up">
                         <div class="col-md-4 offset-md-2 p-2 featureshover" >
                             <div class="text-center">
                                 <img width="80" height="80" class="img-fluid"
@@ -1811,7 +1811,7 @@
             autoplayTimeout: 1000,
             autoplayHoverPause: true,
             nav: true,
-            navText: ["<h1 class='display-4'><i class='fa fa-chevron-left'></i></h1>", "<h1 class='display-4'><i class='fa fa-chevron-right'></i></h1>"],
+            navText: ["<h1 class='display-4 d-none d-sm-none d-md-block'><i class='fa fa-chevron-left'></i></h1>", "<h1 class='display-4 d-none d-sm-none d-md-block'><i class='fa fa-chevron-right'></i></h1>"],
             responsive: {
                 0: {
                     items: 1
