missing image fix and awu navbar updated

--- a/advertising-with-us.html
+++ b/advertising-with-us.html
@@ -96,7 +96,7 @@
             <div class="container d-flex justify-content-center">
 
                 <!-- <h1 class="logo me-auto"><a href="index.html"> <span class="red">Aflax</span><span class="orange">
-            Digital</span><span class="green"> Signage</span> </a></h1> -->
+                Digital</span><span class="green"> Signage</span> </a></h1> -->
                 <!-- <h1 class="logo me-auto"><a href="index.html" class="logo me-auto"><img src="assets/img/logo/aflaxdigitalsignagelogowhite.png" alt="" class="img-fluid"></a></h1> -->
                 <!-- Uncomment below if you prefer to use an image logo -->
                 <!-- <a href="index.html" class="logo me-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
@@ -159,9 +159,6 @@
                         </li>
                         <li><a href="advertising-with-us.html">Advertise With Us</a></li>
                         <li><a href="rental.html">Rentals</a></li>
-                        <li><a href="contact.html">Contact</a></li>
-                        <!-- <li><a href="blog.html">Blog</a></li> -->
-
                         <li><a href="contact.html">Contact Us</a></li>
                         <!-- <li><a href="index.html" class="getstarted">Get Started</a></li> -->
                     </ul>
@@ -261,7 +258,7 @@
                     </div>
                     <br>
                     <br>
-                    
+
                     <div class="row" id="whatWeDo">
                         <div class="col-md-6">
                             <div>
@@ -318,13 +315,18 @@
         <div class="container mt-5" data-aos="fade-up">
             <div class="row">
                 <div class="col-md-12">
-                    <h2 class="text-uppercase text-center text-danger fw-bold">Advantages to Your Advertising Campaigns</h2>
+                    <h2 class="text-uppercase text-center text-danger fw-bold">Advantages to Your Advertising Campaigns
+                    </h2>
                     <p class="text-center">
-                        Our digital signage advertising network contains collection of digital signs that display image, video,
-                        and motion-graphic advertising content to a given audience. The ideal location for a digital advertising
-                        sign is a place where there is heavy foot traffic and a reason for people to slow down. When people have
+                        Our digital signage advertising network contains collection of digital signs that display image,
+                        video,
+                        and motion-graphic advertising content to a given audience. The ideal location for a digital
+                        advertising
+                        sign is a place where there is heavy foot traffic and a reason for people to slow down. When
+                        people have
                         a short pause in their route, they have a chance to observe your digital advertising sign.
-                        These digital signs are typically found in: lobbies, waiting rooms, and other public spaces such as
+                        These digital signs are typically found in: lobbies, waiting rooms, and other public spaces such
+                        as
                         libraries and bus stops
                     </p>
                 </div>
@@ -332,7 +334,7 @@
             <div class="row white-smoke">
                 <div class="col-md-10">
                     <div class="row" data-aos="fade-up">
-                        <div class="col-md-4 offset-md-2 p-2 featureshover" >
+                        <div class="col-md-4 offset-md-2 p-2 featureshover">
                             <div class="text-center">
                                 <img width="80" height="80" class="img-fluid"
                                     src="assets/img/AdvertisingWithUs/icon1.png" alt="">
@@ -353,7 +355,7 @@
             <div class="row mt-2">
                 <div class="col-md-10">
                     <div class="row" data-aos="fade-up">
-                        <div class="col-md-4 offset-md-2 featureshover" >
+                        <div class="col-md-4 offset-md-2 featureshover">
                             <img src="assets/img/AdvertisingWithUs/f2.png" alt="" class="img-fluid">
                         </div>
                         <div class="col-md-4 offset-md-2 p-2 featureshover">
@@ -374,7 +376,7 @@
             <div class="row mt-2 white-smoke">
                 <div class="col-md-10">
                     <div class="row" data-aos="fade-up">
-                        <div class="col-md-4 offset-md-2 p-2 featureshover" >
+                        <div class="col-md-4 offset-md-2 p-2 featureshover">
                             <div class="text-center">
                                 <img width="80" height="80" class="img-fluid"
                                     src="assets/img/AdvertisingWithUs/icon3.png" alt="">
@@ -396,7 +398,7 @@
             <div class="row mt-2">
                 <div class="col-md-10">
                     <div class="row" data-aos="fade-up">
-                        <div class="col-md-4 offset-md-2 featureshover" >
+                        <div class="col-md-4 offset-md-2 featureshover">
                             <img src="assets/img/AdvertisingWithUs/f4.png" alt="" class="img-fluid">
                         </div>
                         <div class="col-md-4 offset-md-2 p-2 featureshover">
@@ -417,7 +419,7 @@
             <div class="row mt-2 white-smoke">
                 <div class="col-md-10">
                     <div class="row" data-aos="fade-up">
-                        <div class="col-md-4 offset-md-2 p-2 featureshover" >
+                        <div class="col-md-4 offset-md-2 p-2 featureshover">
                             <div class="text-center">
                                 <img width="80" height="80" class="img-fluid"
                                     src="assets/img/AdvertisingWithUs/icon5.png" alt="">
