contact us info updated

--- a/index.html
+++ b/index.html
@@ -1670,20 +1670,20 @@
             <div class="info">
               <div class="address">
                 <i class="bi bi-geo-alt"></i>
-                <h4 class="text-white">Location:</h4>
-                <p class="text-white">A108 Adam Street, New York, NY 535022</p>
+                <h4 class="text-white">Our Head Office:</h4>
+                <p class="text-white">Maka AL mukarama Street Hodan District. Mogadishu, Somalia</p>
               </div>
 
               <div class="email">
-                <i class="bi bi-envelope"></i>
-                <h4 class="text-white">Email:</h4>
-                <p class="text-white">info@aflaxdigitalsignage.com</p>
+                <i class="bi bi-chat-right-dots-fill"></i>
+                <h4 class="text-white">Contact Us:</h4>
+                <p class="text-white">Tel: +252 611216363 /+252 621216363 <br> Email: info@aflaxdigitalsignage.com <br> Website: www.Aflax.digital</p>
               </div>
 
               <div class="phone">
-                <i class="bi bi-phone"></i>
-                <h4 class="text-white">Call:</h4>
-                <p class="text-white">+1 5589 55488 55s</p>
+                <i class="bi bi-clock"></i>
+                <h4 class="text-white">Time:</h4>
+                <p class="text-white">7:30am - 5:00 pm</p>
               </div>
 
             </div>
