contact us info updated again

--- a/index.html
+++ b/index.html
@@ -1683,7 +1683,7 @@
               <div class="phone">
                 <i class="bi bi-clock"></i>
                 <h4 class="text-white">Time:</h4>
-                <p class="text-white">7:30am - 5:00 pm</p>
+                <p class="text-white">7:30 AM - 5:00 PM</p>
               </div>
 
             </div>
