--- a/index.html
+++ b/index.html
@@ -1677,7 +1677,8 @@
               <div class="email">
                 <i class="bi bi-chat-right-dots-fill"></i>
                 <h4 class="text-white">Contact Us:</h4>
-                <p class="text-white">Tel: +252 611216363 /+252 621216363 <br> Email: info@aflaxdigitalsignage.com <br> Website: www.Aflax.digital</p>
+                <p class="text-white" style="color: #ffffff;">Tel: +252 611216363 /+252 621216363 <br> Email:
+                  info@aflaxdigitalsignage.com <br> Website: www.Aflax.digital</p>
               </div>
 
               <div class="phone">
@@ -1750,10 +1751,17 @@
             <div class="footer-info">
               <h3>Aflax Digital Signage</h3>
               <p>
-                A108 Adam Street <br>
-                NY 535022, USA<br><br>
-                <strong>Phone:</strong> +1 5589 55488 55<br>
-                <strong>Email:</strong> info@aflaxdigitalsignage.com<br>
+                <strong>Our Head Office</strong>
+                 <br>
+                Maka AL mukarama Street <br>
+                Hodan District. <br>
+                Mogadishu, Somalia <br>
+                <!-- A108 Adam Street <br>
+                NY 535022, USA<br><br> -->
+                <strong>Tel:</strong> +252 611216363 /+252 621216363<br>
+                <strong>Email:</strong> info@Aflax.digital<br>
+                <strong>Website:</strong> www.Aflax.digital<br>
+                <strong>Time:</strong> 7:30 AM - 5:00 PM<br>
               </p>
               <div class="social-links mt-3">
                 <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
