--- a/index.html
+++ b/index.html
@@ -80,14 +80,14 @@
       <div class="container">
         <div class="row d-flex align-items-center justify-content-evenly">
           <div class="col-md-4 text-center p-2">
-            <h5><i class="far fa-envelope"></i> mail@gmail.com</h5>
+            <h5><i class="far fa-envelope"></i> info@Aflax.digital</h5>
           </div>
           <div class="col-md-4 text-center p-2">
             <a href="index.html"><img style="height: 100px;" class="img-fluid"
                 src="assets/img/logo/aflaxdigitalsignagelogowhite.png"></a>
           </div>
           <div class="col-md-4 text-center p-2">
-            <h5><i class="fas fa-phone-square-alt"></i>+8888888888</h5>
+            <h5><i class="fas fa-phone-square-alt"></i>+252 611216363 /+252 621216363</h5>
           </div>
         </div>
       </div>
