--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
       <div class="container">
         <div class="row d-flex align-items-center justify-content-evenly">
           <div class="col-md-4 text-center p-2">
-            <h5><i class="far fa-envelope"></i> info@Aflax.digital</h5>
+            <h5><i class="far fa-envelope"></i> info@aflax.digital</h5>
           </div>
           <div class="col-md-4 text-center p-2">
             <a href="index.html"><img style="height: 100px;" class="img-fluid"
@@ -1671,7 +1671,8 @@
               <div class="address">
                 <i class="bi bi-geo-alt"></i>
                 <h4 class="text-white">Our Head Office:</h4>
-                <p class="text-white">Maka AL mukarama Street Hodan District. Mogadishu, Somalia</p>
+                <p class="text-white">Maka Al-mukarama Street, Hodan District
+                  Mogadishu, Somalia</p>
               </div>
 
               <div class="email">
@@ -1752,14 +1753,13 @@
               <h3>Aflax Digital Signage</h3>
               <p>
                 <strong>Our Head Office</strong>
-                 <br>
-                Maka AL mukarama Street <br>
-                Hodan District. <br>
+                <br>
+                Maka Al-mukarama Street, Hodan District
                 Mogadishu, Somalia <br>
                 <!-- A108 Adam Street <br>
                 NY 535022, USA<br><br> -->
                 <strong>Tel:</strong> +252 611216363 /+252 621216363<br>
-                <strong>Email:</strong> info@Aflax.digital<br>
+                <strong>Email:</strong> info@aflax.digital<br>
                 <strong>Website:</strong> www.Aflax.digital<br>
                 <strong>Time:</strong> 7:30 AM - 5:00 PM<br>
               </p>
