--- a/index.html
+++ b/index.html
@@ -1822,7 +1822,7 @@
 
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <strong><span>AFLAX DIGITAL SIGNAGE</span></strong>. All Rights Reserved
+        &copy; Copyright <strong><span>AFLAX DIGITAL</span></strong>. All Rights Reserved
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
