--- a/index.html
+++ b/index.html
@@ -1679,7 +1679,7 @@
                 <i class="bi bi-chat-right-dots-fill"></i>
                 <h4 class="text-white">Contact Us:</h4>
                 <p class="text-white" style="color: #ffffff;">Tel: +252 611216363 /+252 621216363 <br> Email:
-                  info@aflaxdigitalsignage.com <br> Website: www.Aflax.digital</p>
+                  info@aflax.digital <br> Website: www.aflax.digital</p>
               </div>
 
               <div class="phone">
@@ -1760,7 +1760,7 @@
                 NY 535022, USA<br><br> -->
                 <strong>Tel:</strong> +252 611216363 /+252 621216363<br>
                 <strong>Email:</strong> info@aflax.digital<br>
-                <strong>Website:</strong> www.Aflax.digital<br>
+                <strong>Website:</strong> www.aflax.digital<br>
                 <strong>Time:</strong> 7:30 AM - 5:00 PM<br>
               </p>
               <div class="social-links mt-3">
