home page changes

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 src="assets/img/logo/aflaxdigitalsignagelogowhite.png"></a>
           </div>
           <div class="col-md-4 text-center p-2">
-            <h5><i class="fas fa-phone-square-alt"></i>+252 611216363 /+252 621216363</h5>
+            <h5><i class="fas fa-phone-square-alt"></i>+252 611216363</h5>
           </div>
         </div>
       </div>
