home page changes

--- a/index.html
+++ b/index.html
@@ -1678,7 +1678,7 @@
               <div class="email">
                 <i class="bi bi-chat-right-dots-fill"></i>
                 <h4 class="text-white">Contact Us:</h4>
-                <p class="text-white" style="color: #ffffff;">Tel: +252 611216363 /+252 621216363 <br> Email:
+                <p class="text-white" style="color: #ffffff;">Tel: +252 611216363<br> Email:
                   info@aflax.digital <br> Website: www.aflax.digital</p>
               </div>
 
@@ -1758,7 +1758,7 @@
                 Mogadishu, Somalia <br>
                 <!-- A108 Adam Street <br>
                 NY 535022, USA<br><br> -->
-                <strong>Tel:</strong> +252 611216363 /+252 621216363<br>
+                <strong>Tel:</strong> +252 611216363<br>
                 <strong>Email:</strong> info@aflax.digital<br>
                 <strong>Website:</strong> www.aflax.digital<br>
                 <strong>Time:</strong> 7:30 AM - 5:00 PM<br>
