contact us form

--- a/index.html
+++ b/index.html
@@ -1671,7 +1671,7 @@
               <div class="address">
                 <i class="bi bi-geo-alt"></i>
                 <h4 class="text-white">Our Head Office:</h4>
-                <p class="text-white">Maka Al-mukarama Street, Hodan District
+                <p class="text-white">Maka Al-mukarama Street, <br> Hodan District <br>
                   Mogadishu, Somalia</p>
               </div>
 
@@ -1694,7 +1694,7 @@
 
           <div class="col-lg-8 mt-5 mt-lg-0">
 
-            <form method="post" role="form" class="php-email-form">
+            <form action="mailto:info@aflax.digital" method="POST" enctype="multipart/form-data" name="EmailForm" style="margin-top: 25px;">
               <div class="row">
                 <div class="col-md-6 form-group">
                   <input type="text" name="first_name" class="form-control" id="first_name"
@@ -1725,12 +1725,12 @@
               <div class="form-group mt-3">
                 <textarea class="form-control" name="message" rows="5" placeholder="Message" required></textarea>
               </div> -->
-              <div class="my-3">
+              <div class="my-3 d-none">
                 <div class="loading">Loading</div>
                 <div class="error-message"></div>
                 <div class="sent-message">Your message has been sent. Thank you!</div>
               </div>
-              <div class="text-center"><button class="btn btn-light">Submit</button></div>
+              <div class="text-center"><button class="btn btn-light mt-5 btn-lg">Submit</button></div>
             </form>
 
           </div>
