--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon/favicon.png" rel="icon">
+  <link href="assets/img/favicon/favico.ico" rel="icon">
   <!-- <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon"> -->
 
   <!-- Google Fonts -->
@@ -1764,11 +1764,12 @@
                 <strong>Time:</strong> 7:30 AM - 5:00 PM<br>
               </p>
               <div class="social-links mt-3">
-                <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-                <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-                <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-                <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-                <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+                <a href="https://twitter.com/AflaxDigital" target="_blank" class="twitter"><i class="bx bxl-twitter"></i></a>
+                <a href="https://fb.me/Aflaxdigitalsignage" target="_blank" class="facebook"><i class="bx bxl-facebook"></i></a>
+                <a href="https://www.instagram.com/aflax_digital/" target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a>
+                <a href="https://join.skype.com/invite/NNkT1gOVJ0eT" target="_blank" class="google-plus"><i class="bx bxl-skype"></i></a>
+                <a href="https://www.linkedin.com/in/aflax-digital/" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+                <a href="https://wa.me/+252611216363" target="_blank" class="linkedin"><i class="bx bxl-whatsapp"></i></a>
               </div>
             </div>
           </div>
