--- a/index.html
+++ b/index.html
@@ -1694,7 +1694,7 @@
 
           <div class="col-lg-8 mt-5 mt-lg-0">
 
-            <form action="https://mailto:info@aflax.digital" method="POST" enctype="multipart/form-data" name="EmailForm" style="margin-top: 25px;">
+            <form action="mailto:info@aflax.digital" method="POST" enctype="multipart/form-data" name="EmailForm" style="margin-top: 25px;">
               <div class="row">
                 <div class="col-md-6 form-group">
                   <input type="text" name="first_name" class="form-control" id="first_name"
